tomcat-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: tomcatinfra
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: tomcatinfra
  template: 
    metadata: 
      labels: 
        app: tomcatinfra
      name: tomcatinfra
    spec: 
      containers: 
        - 
          image: saravak/tomcat8
          name: tomcatapp
