ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcatinfra
  annotations:
    kubernetes.io/ingress.class: ingress-nginx
spec:
  rules:
  - host: test.example.com
    http:
      paths:
      - backend:
          serviceName: my-cip-service
          servicePort: 80
